# shepherd

./: README.md
edge_ai_engine/: .gitignore  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md  README.md  requirements.txt
edge_ai_engine/benchmarks/: CMakeLists.txt  benchmark_inference_latency.cpp  benchmark_optimization_system.cpp  benchmark_profiler_overhead.cpp  benchmark_scheduler_batching.cpp
edge_ai_engine/docs/api/: README.md
edge_ai_engine/docs/architecture/: README.md
edge_ai_engine/docs/contributing/: README.md
edge_ai_engine/docs/deployment/: README.md
edge_ai_engine/docs/performance/: README.md
edge_ai_engine/docs/testing/: README.md
edge_ai_engine/examples/: CMakeLists.txt  basic_inference.cpp
edge_ai_engine/include/analytics/: telemetry_analytics.h
edge_ai_engine/include/autonomous/: autonomous_optimizer.h  dag_generator.h  synthetic_testbed.h
edge_ai_engine/include/backend/: backend_registry.h  cpu_backend.h  cuda_backend.h  execution_backend.h  mock_gpu_backend.h
edge_ai_engine/include/batching/: batching_manager.h
edge_ai_engine/include/core/: batching_config.h  batching_stats.h  counter_stats.h  cpu_device.h  device.h  device_info.h  device_memory_usage.h  edge_ai_engine.h  gpu_device.h  graph_optimization_config.h  hardware_utilization_stats.h  inference_config.h  inference_engine.h  inference_stats.h  memory_allocator_stats.h  memory_config.h  memory_pool_stats.h  memory_stats.h  memory_usage_stats.h  model.h  model_loader.h  optimization_benefits.h  optimization_stats.h  profiler_config.h  profiler_stats.h  profiling_report.h  pruning_config.h  quantization_config.h  request_priority.h  runtime_scheduler.h  scheduler_config.h  scheduler_stats.h  task_priority.h  task_status.h  task_type.h  timing_stats.h  types.h
edge_ai_engine/include/distributed/: advanced_telemetry.h  auto_scaler.h  cluster_manager.h  cluster_types.h  distributed_scheduler.h  graph_partitioner.h  migration_manager.h  ml_orchestrator.h  multi_tenant_execution.h  predictive_failover.h  qos_manager.h  reactive_scheduler.h  self_healing_graphs.h  streaming_migration.h  transport_layer.h
edge_ai_engine/include/evolution/: evolution_manager.h
edge_ai_engine/include/federation/: federation_manager.h
edge_ai_engine/include/governance/: governance_manager.h
edge_ai_engine/include/graph/: graph.h  graph_compiler.h  graph_executor.h  graph_scheduler.h  graph_types.h
edge_ai_engine/include/hardware/: cpu_accelerator.h  device_manager.h  gpu_accelerator.h  npu_accelerator.h
edge_ai_engine/include/memory/: memory_allocator.h  memory_manager.h  memory_pool.h
edge_ai_engine/include/ml_policy/: ml_based_policy.h
edge_ai_engine/include/optimization/: graph_optimizer.h  optimization_manager.h  optimizer.h  pruner.h  quantizer.h
edge_ai_engine/include/profiling/: metrics_collector.h  performance_counter.h  profiler.h  profiler_session.h
edge_ai_engine/include/security/: security_manager.h
edge_ai_engine/include/testing/: behavior_driven_testing.h  comprehensive_report_generator.h  interface_validator.h  property_based_testing.h  simple_property_testing.h  test_common.h  test_coverage.h  test_discovery.h  test_framework.h  test_integration.h  test_orchestration.h  test_performance.h  test_reporter.h  test_runner.h  test_utilities.h  test_validation.h
edge_ai_engine/include/utils/: config_parser.h  error_handler.h  file_utils.h  logger.h
edge_ai_engine/python/conversion/: model_converter.py
edge_ai_engine/python/optimization/: model_optimizer.py
edge_ai_engine/python/testing/: test_runner.py
edge_ai_engine/scripts/: build.sh  test_complete_system.sh
edge_ai_engine/src/: CMakeLists.txt
edge_ai_engine/src/analytics/: telemetry_analytics.cpp
edge_ai_engine/src/autonomous/: autonomous_optimizer.cpp  dag_generator.cpp  synthetic_testbed.cpp
edge_ai_engine/src/backend/: backend_registry.cpp  cpu_backend.cpp  cuda_backend.cpp  execution_backend.cpp  mock_gpu_backend.cpp
edge_ai_engine/src/batching/: batching_manager.cpp
edge_ai_engine/src/core/: cpu_device.cpp  device.cpp  edge_ai_engine.cpp  gpu_device.cpp  inference_engine.cpp  model.cpp  model_loader.cpp  runtime_scheduler.cpp  types.cpp
edge_ai_engine/src/distributed/: CMakeLists.txt  advanced_telemetry.cpp  cluster_manager.cpp  distributed_scheduler.cpp  graph_partitioner.cpp  migration_manager.cpp  multi_tenant_execution.cpp  predictive_failover.cpp  reactive_scheduler.cpp  self_healing_graphs.cpp  streaming_migration.cpp  transport_layer.cpp
edge_ai_engine/src/evolution/: evolution_manager.cpp
edge_ai_engine/src/federation/: federation_manager.cpp
edge_ai_engine/src/governance/: governance_manager.cpp
edge_ai_engine/src/graph/: CMakeLists.txt  graph.cpp  graph_compiler.cpp  graph_executor.cpp  graph_scheduler.cpp
edge_ai_engine/src/hardware/: cpu_accelerator.cpp  device_manager.cpp  gpu_accelerator.cpp  npu_accelerator.cpp
edge_ai_engine/src/memory/: memory_allocator.cpp  memory_manager.cpp  memory_pool.cpp
edge_ai_engine/src/ml_policy/: CMakeLists.txt  ml_based_policy.cpp
edge_ai_engine/src/optimization/: CMakeLists.txt  graph_optimizer.cpp  optimization_manager.cpp  optimizer.cpp  pruner.cpp  quantizer.cpp
edge_ai_engine/src/profiling/: metrics_collector.cpp  performance_counter.cpp  profiler.cpp  profiler_session.cpp
edge_ai_engine/src/security/: security_manager.cpp
edge_ai_engine/src/testing/: CMakeLists.txt  behavior_driven_testing.cpp  comprehensive_report_generator.cpp  interface_validator.cpp  property_based_testing.cpp  simple_property_testing.cpp  test_coverage.cpp  test_discovery.cpp  test_framework.cpp  test_integration.cpp  test_orchestration.cpp  test_performance.cpp  test_reporter.cpp  test_runner.cpp  test_utilities.cpp  test_validation.cpp
edge_ai_engine/tests/: CMakeLists.txt  bdt_test_runner.cpp  comprehensive_test_runner.cpp  debug_test.cpp  property_based_test_runner.cpp  simple_property_test_runner.cpp
edge_ai_engine/tools/: CMakeLists.txt  trace_viewer.cpp  trace_viewer_simple.cpp  validation_report_generator.cpp
(+26 files in other folders)
